改变component变改变变

--- a/src/pages/Home/components/Head/index.module.scss
+++ b/src/pages/Home/components/Head/index.module.scss
@@ -25,6 +25,7 @@
       justify-content: center;
       align-items: center;
       margin-right: 10px;
+      color: #fff;
       .addr {
         font-weight: bold;
         max-width: 70px;
@@ -64,6 +65,4 @@
     text-overflow: ellipsis;
     overflow: hidden;
   }
-  
 }
-
