--- a/src/pages/Home/components/Content/components/Nav/index.module.scss
+++ b/src/pages/Home/components/Content/components/Nav/index.module.scss
@@ -5,7 +5,10 @@
   align-items: center;
   position: relative;
   font-size: 13px;
-  margin-top: 17px;
+  padding: 17px 4px;
+  margin-bottom: 5px;
+  background-color: #fff;
+
   .item {
     width: 20%;
     a {
