--- a/src/pages/Home/components/Content/components/Nav/index.module.scss
+++ b/src/pages/Home/components/Content/components/Nav/index.module.scss
@@ -1,7 +1,7 @@
 .wrap {
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   position: relative;
   font-size: 13px;
