--- a/src/pages/Home/components/Content/index.module.scss
+++ b/src/pages/Home/components/Content/index.module.scss
@@ -1,5 +1,5 @@
 .container {
   margin-top: 50px;
-  overflow: hidden;
-  height: calc(100vh - 100px);
+  // overflow: hidden;
+  // height: calc(100vh - 100px);
 }
