--- a/src/pages/Home/components/FootTab/index.module.scss
+++ b/src/pages/Home/components/FootTab/index.module.scss
@@ -1,25 +1,28 @@
-.wrap {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.container {
   height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  .item {
-    flex: auto;
+  // position: relative;
+  .wrap {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    font-size: 12px;
-    .img {
-      background-image: url('//static.daojia.com/assets/project/wx-index-v2/images/foot-v2.png');
-      background-size: 172px 50px;
-      width: 25px;
-      height: 25px;
+    background-color: #fff;
+    .item {
+      flex: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      font-size: 12px;
+      .img {
+        background-image: url('//static.daojia.com/assets/project/wx-index-v2/images/foot-v2.png');
+        background-size: 172px 50px;
+        width: 25px;
+        height: 25px;
+      }
     }
   }
 }
