--- a/src/pages/Home/components/Content/components/Footer/index.module.scss
+++ b/src/pages/Home/components/Content/components/Footer/index.module.scss
@@ -1,6 +1,6 @@
 .container {
   background-color: #fff;
-  padding: 0 15px;
+  padding: 0 15px 20px;
   text-align: center;
   .nav {
     line-height: 40px;
@@ -11,6 +11,10 @@
       flex: auto;
       font-size: 14px;
     }
+    .activate {
+      color: #e6454a;
+      border-bottom: 1px solid #e6454a;
+    }
   }
   .wrap {
     display: flex;
@@ -18,6 +22,7 @@
     align-items: center;
     margin-top: 20px;
     flex-wrap: wrap;
+    font-size: 14px;
     .item {
       flex-basis: 50%;
       margin: 5px 0;
@@ -26,10 +31,9 @@
   .showMore {
     font-size: 14px;
     font-weight: 700;
-    &::after{
+    &::after {
       content: '';
       display: inline-block;
-      
     }
   }
 }
