--- a/src/pages/Addr/components/SearchBox/index.module.scss
+++ b/src/pages/Addr/components/SearchBox/index.module.scss
@@ -5,7 +5,7 @@
   .wrap {
     margin-right: 15px;
     background-color: #eff0f1;
-    // height: 35px;
+    height: 35px;
     line-height: 35px;
     border-radius: 25px;
     display: flex;
@@ -59,7 +59,6 @@
       color: #e6454a;
       font-size: 15px;
       text-align: center;
-      
     }
   }
   .wrapSmall {
